Added demos for both xhr-src and xhr-href loading resources from domain with CORS enabled.

--- a/demo/xhr-src/index.html
+++ b/demo/xhr-src/index.html
@@ -6,11 +6,11 @@
 <body>
   <div ng-controller="ImageController">
       <h1>Demo of angular-xhr-src</h1>
-      <p>The image below is loaded with xhr-src directive.</p>
+      <p>The chicken below is loaded with xhr-src directive.</p>
       <p><img xhr-src="{{imageUrl}}"></p>
   </div>
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
   <script src="../../angular-xhr-src.js"></script>
   <script src="app.js"></script>
 </body>
