--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>angular-xhr-src</h1>
-        <p>Request IMG src and LINK href via XHR and serve as Blob URL.  Useful for apps running under Content Security Policy (CSP).</p>
-
         <p class="view"><a href="https://github.com/ArtOfContext/angular-xhr-src">View the Project on GitHub <small>ArtOfContext/angular-xhr-src</small></a></p>
 
 
@@ -44,9 +41,14 @@ angular.module('myApp', ['xhrSrc'])
 &lt;img xhr-src="http://cdn.jsdelivr.net/emojione/assets/png/1F414.png?v=1.2.4"&gt;
 </code></pre>
 
+<h2><a href="demo/xhr-src/index.html">Demo</a></h2>
+
 <pre><code>&lt;!-- use xhr-href instead of href and request will be made via XHR --&gt;
 &lt;link rel="stylesheet" xhr-href="http://getbootstrap.com/dist/css/bootstrap.min.css"&gt;
 </code></pre>
+
+<h2><a href="demo/xhr-href/index.html">Demo</a></h2>
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/ArtOfContext">ArtOfContext</a></p>
