Added new directives xhr-array-buffer-src and xhr-array-buffer-href.  It retrieves with responseType arraybuffer (rather than blob) and populates the image src and link href with a data url.

--- a/demo/xhr-src/index.html
+++ b/demo/xhr-src/index.html
@@ -6,7 +6,7 @@
 <body>
   <div ng-controller="ImageController">
       <h1>Demo of angular-xhr-src</h1>
-      <p>The chicken below is loaded with xhr-src directive.</p>
+      <p>The image below is loaded with xhr-src directive.</p>
       <p><img xhr-src="{{imageUrl}}"></p>
   </div>
 
